namespace Nestin.Core.Dtos.Amenities
{
    public class AmenityDto
    {
        public int Id { get; set; }
        public string Name { get; set; }
        public string? Icon { get; set; }
        public int CategoryId { get; set; }
    }
}
