namespace Nestin.Core.Dtos.AmenityCategories
{
    public class AmenityCategoryDto
    {
        public int Id { get; set; }
        public string Name { get; set; }
    }
}
