namespace Nestin.Core.Dtos.Countires
{
    public class CountryDto
    {
        public int Id { get; set; }
        public string Name { get; set; }
        public int RegionId { get; set; }
    }
}
