namespace Nestin.Core.Dtos.PropertyTypes
{
    public class PropertyTypeDto
    {
        public int Id { get; set; }
        public string Name { get; set; }
        public string? Icon { get; set; }
    }
}
