namespace Nestin.Core.Dtos
{
    public class RegionDto
    {
        public int Id { get; set; }
        public string Name { get; set; }
    }
}
