export interface Category{
    id:string;
    name:string;
    icon:string;
}